[NO-JIRA] Update Snowflake V2 documentation